# gcgos

./: .clang-format  .gitignore  .lldb  .lldbinit  CMakeLists.txt  Makefile  README.md  compile_commands.json  kernel.ld
include/: .defs.h.swp  arm.h  bio.h  defs.h  dev.h  elf.h  fcntl.h  fd.h  fs.h  gicv2.h  memlayout.h  param.h  proc.h  sdhci.h  spinlock.h  syscall.h  sysregs.h  trap.h  uart.h  vm.h  xv6_syscall.h
kernel/: bio.c  boot.S  console.c  elf.c  exec.c  fd.c  file.c  fs.c  kernel.ld  kernelvec.S  main.c  pipe.c  pl011_uart.c  printf.c  proc.c  sdhci.c  spinlock.c  syscall.c  timer.c  trampoline.S  trap.c  vm.c
mkfs/: mkfs.c
source/: boot.S  console.c  exec.c  gicv2.c  kalloc.c  kernel.c  kernel.ld  kernelvec.S  memlayout.h  mini_uart.c  mmu.S  pl011_uart.c  printf.c  proc.c  swtch.S  syscall.c  timer.c  trampoline.S  trap.c  trapoline.S  uart.c  user_proc.c  vectors.S  vm.c
user/: README  cat.c  echo.c  init.c  printf.c  sh.c  ulib.c  ulib.h  user.ld  user1.c  user2.c
